// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UniProtKBGroupByResults component with EC groups should render 1`] = `
<DocumentFragment>
  <h2
    class="small"
  >
    Group by Enzyme Classification
  </h2>
  <section
    class="autocomplete"
  >
    <label>
      Search for Enzyme Classification
      <div
        class="autocomplete-container"
        translate="no"
      >
        <span
          class="search-input"
        >
          <input
            data-testid="search-input"
            placeholder="Enter Enzyme Classification name or ID"
            type="search"
            value=""
          />
          <span
            class="search-input__suffix"
            data-testid="search-input-suffix"
            role="presentation"
          >
            <test-file-stub
              height="14"
              width="14"
            />
          </span>
        </span>
        <div
          class="autocomplete-menu"
        >
          <div
            class="dropdown-menu__panel"
          />
        </div>
      </div>
    </label>
  </section>
  <div
    class="groupby-container"
  >
    <ul
      class="no-bullet groupby groupby__header"
    >
      <li
        class="header"
      >
        <h3
          class="tiny count"
        >
          UniProtKB Entries
        </h3>
        <h3
          class="tiny label"
        >
          Enzyme Classification
        </h3>
      </li>
      <li
        class="parent"
      >
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=shadab"
            title="UniProtKB search results for query:shadab"
          >
            123
          </a>
        </span>
        <span
          class="label"
        >
          <a
            href="uniprotkb?groupBy=ec&query=shadab"
            title="Set parent node to Top level"
          >
            Top level
          </a>
        </span>
      </li>
      <li
        class="parent"
      >
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=shadab AND (ec:3.-.-.-)"
            title="UniProtKB search results with Enzyme Classification: Hydrolases (ID:3.-.-.-) and query:shadab"
          >
            0
          </a>
        </span>
        <span
          class="label"
        >
          <span
            class="container active-label"
          >
            <button
              aria-describedby="1"
              class="trigger"
              type="button"
            >
              Hydrolases
            </button>
            <span
              class="visually-hidden"
              id="1"
            >
              Parent node currently set to Hydrolases (ID:3.-.-.-)
            </span>
            <span
              aria-hidden="true"
              class="bubble"
            >
              Parent node currently set to Hydrolases (ID:3.-.-.-)
            </span>
          </span>
          <a
            class="external-link"
            href="https://enzyme.expasy.org/EC/3.-.-.-"
            rel="noopener"
            target="_blank"
            title="The Enzyme Classification entry page for Hydrolases (ID:3.-.-.-)"
          >
            Enzyme Classification ID:3.-.-.-
            <test-file-stub
              data-testid="external-link-icon"
              width="12.5"
            />
          </a>
        </span>
      </li>
    </ul>
    <div
      class="no-results message message--info"
      role="status"
    >
      <div
        class="message__side-border"
      />
      <test-file-stub
        class="message--icon-align-top"
        height="1.125em"
        width="1.125em"
      />
      <div
        class="message__title"
      >
        <small>
          This Enzyme Classification node has no children.
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBGroupByResults component with taxonomy groups should render 1`] = `
<DocumentFragment>
  <h2
    class="small"
  >
    Group by Taxonomy
  </h2>
  <section
    class="autocomplete"
  >
    <label>
      Search for Taxonomy
      <div
        class="autocomplete-container"
        translate="no"
      >
        <span
          class="search-input"
        >
          <input
            data-testid="search-input"
            placeholder="Enter Taxonomy name or ID"
            type="search"
            value=""
          />
          <span
            class="search-input__suffix"
            data-testid="search-input-suffix"
            role="presentation"
          >
            <test-file-stub
              height="14"
              width="14"
            />
          </span>
        </span>
        <div
          class="autocomplete-menu"
        >
          <div
            class="dropdown-menu__panel"
          />
        </div>
      </div>
    </label>
  </section>
  <div
    class="groupby-container"
  >
    <ul
      class="no-bullet groupby groupby__header"
    >
      <li
        class="header"
      >
        <h3
          class="tiny count"
        >
          UniProtKB Entries
        </h3>
        <h3
          class="tiny label"
        >
          Taxonomy
        </h3>
      </li>
      <li
        class="parent"
      >
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=*"
            title="UniProtKB search results for query:*"
          >
            123
          </a>
        </span>
        <span
          class="label"
        >
          <span
            class="container"
          >
            <button
              aria-describedby="1"
              class="trigger"
              type="button"
            >
              Top level
            </button>
            <span
              class="visually-hidden"
              id="1"
            >
              Parent node currently set to top level
            </span>
            <span
              aria-hidden="true"
              class="bubble"
            >
              Parent node currently set to top level
            </span>
          </span>
        </span>
      </li>
    </ul>
    <ul
      class="no-bullet groupby"
    >
      <li
        class="node"
      >
        <span
          class="expand"
        >
          <button
            aria-expanded="false"
            class="button secondary"
            title="Reveal children of cellular organisms"
            type="button"
          >
            ►
          </button>
        </span>
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=* AND (taxonomy_id:131567)"
            title="UniProtKB search results with Taxonomy: cellular organisms (ID:131567) and query:*"
          >
            148,700,306
          </a>
        </span>
        <span
          class="label"
          style="width: 20ch;"
        >
          <a
            href="/uniprotkb?groupBy=taxonomy&parent=131567&query=*"
            title="Set parent node to cellular organismsID:131567"
          >
            cellular organisms
          </a>
        </span>
        <span
          title="Number of UniProtKB search results with Taxonomy: cellular organisms (ID:131567) and query * is 148,700,306 which is 99.26% of all sibling results."
        >
          <span
            class="bar"
            style="width: 297.7775209193284px;"
          />
          <span
            class="percentage"
          >
            99%
          </span>
        </span>
      </li>
      <li
        class="node"
      >
        <span
          class="expand"
        >
          <button
            aria-expanded="false"
            class="button secondary"
            title="Reveal children of other entries"
            type="button"
          >
            ►
          </button>
        </span>
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=* AND (taxonomy_id:2787854)"
            title="UniProtKB search results with Taxonomy: other entries (ID:2787854) and query:*"
          >
            434
          </a>
        </span>
        <span
          class="label"
          style="width: 20ch;"
        >
          <a
            href="/uniprotkb?groupBy=taxonomy&parent=2787854&query=*"
            title="Set parent node to other entriesID:2787854"
          >
            other entries
          </a>
        </span>
        <span
          title="Number of UniProtKB search results with Taxonomy: other entries (ID:2787854) and query * is 434 which is 0.00% of all sibling results."
        >
          <span
            class="bar"
            style="width: 1px;"
          />
          <span
            class="percentage"
          >
            &lt;1%
          </span>
        </span>
      </li>
      <li
        class="node"
      >
        <span
          class="expand"
        >
          <button
            aria-expanded="false"
            class="button secondary"
            title="Reveal children of unclassified entries"
            type="button"
          >
            ►
          </button>
        </span>
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=* AND (taxonomy_id:2787823)"
            title="UniProtKB search results with Taxonomy: unclassified entries (ID:2787823) and query:*"
          >
            4,719
          </a>
        </span>
        <span
          class="label"
          style="width: 20ch;"
        >
          <a
            href="/uniprotkb?groupBy=taxonomy&parent=2787823&query=*"
            title="Set parent node to unclassified entriesID:2787823"
          >
            unclassified entries
          </a>
        </span>
        <span
          title="Number of UniProtKB search results with Taxonomy: unclassified entries (ID:2787823) and query * is 4,719 which is 0.00% of all sibling results."
        >
          <span
            class="bar"
            style="width: 1px;"
          />
          <span
            class="percentage"
          >
            &lt;1%
          </span>
        </span>
      </li>
      <li
        class="node"
      >
        <span
          class="expand"
        >
          <button
            aria-expanded="false"
            class="button secondary"
            title="Reveal children of Viruses"
            type="button"
          >
            ►
          </button>
        </span>
        <span
          class="count"
        >
          <a
            href="/uniprotkb?query=* AND (taxonomy_id:10239)"
            title="UniProtKB search results with Taxonomy: Viruses (ID:10239) and query:*"
          >
            1,104,680
          </a>
        </span>
        <span
          class="label"
          style="width: 20ch;"
        >
          <a
            href="/uniprotkb?groupBy=taxonomy&parent=10239&query=*"
            title="Set parent node to VirusesID:10239"
          >
            Viruses
          </a>
        </span>
        <span
          title="Number of UniProtKB search results with Taxonomy: Viruses (ID:10239) and query * is 1,104,680 which is 0.74% of all sibling results."
        >
          <span
            class="bar"
            style="width: 2.2121600194229845px;"
          />
          <span
            class="percentage"
          >
            1%
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
